fix: futher improve card styling on mobile fix: crash on massive fonts on mobile

--- a/common/css.css
+++ b/common/css.css
@@ -51,7 +51,7 @@
 
 a[href]:active, button:not([disabled]):active, fieldset:not([disabled]):active, input:not([disabled]):active, optgroup:not([disabled]):active, option:not([disabled]):active, select:not([disabled]):active, textarea:not([disabled]):active, details:active, [tabindex]:not([tabindex="-1"]):active, [contenteditable]:active, [controls]:active {
   transition: transform 0.1s ease-in-out;
-  transform: scale(0.95);
+  transform: scale(0.95) !important;
 }
 
 .btn-secondary {
